--- a/Android/scenes/cantata/src/main/res/layout/cantata_dialog_music_setting.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_dialog_music_setting.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root_dialog_music_settings"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/cantata_bg_full_blue_top_20"
@@ -17,9 +19,9 @@
         android:textStyle="bold" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="horizontal">
@@ -28,22 +30,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cantata_music_menu_dialog_ear"
-            android:textSize="14sp"
-            android:textColor="@color/def_text_grey_979" />
+            android:textColor="@color/white" />
 
-        <androidx.appcompat.widget.AppCompatCheckBox
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/switchEar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:button="@drawable/cb_def_selector" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="@string/cantata_please_use_headset"
-            android:textSize="12sp"
+            android:drawableRight="@drawable/cantata_ic_arrow_right"
+            android:drawablePadding="5dp"
+            android:text="关闭"
             android:textColor="@color/def_text_grey_6c7" />
     </LinearLayout>
 
@@ -52,15 +52,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:visibility="gone"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:visibility="gone">
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cantata_music_menu_dialog_mv"
-            android:textSize="14sp"
             android:textColor="@color/def_text_grey_979" />
 
         <androidx.appcompat.widget.AppCompatCheckBox
@@ -79,15 +78,14 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="false"
             android:focusable="false"
-            android:textSize="14sp"
             android:text="@string/cantata_music_menu_dialog_tone"
             android:textColor="#9BA2AB" />
 
@@ -101,19 +99,23 @@
             android:padding="6dp"
             android:src="@drawable/ic_tone_down" />
 
-        <io.agora.scene.widget.CustomVolumeSeekBarView
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/changeToneView"
             android:layout_width="180dp"
-            android:layout_height="28dp"
-            android:layout_marginBottom="3dp"
-            android:clickable="false"
-            android:focusable="false"
-            tools:text="0" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/cantata_music_menu_dialog_vol1"
+            android:max="12"
+            android:min="-12"
+            android:progress="0"
+            android:progressDrawable="@drawable/bg_seekbar_progress"
+            android:thumb="@mipmap/ic_seekbar_btn" />
 
         <ImageButton
             android:id="@+id/btn_tone_up_dialog_setting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:background="@null"
             android:contentDescription="@string/cantata_tone_up"
             android:padding="6dp"
@@ -123,38 +125,57 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="20dp"
         android:gravity="center"
         android:orientation="horizontal">
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="false"
             android:focusable="false"
             android:text="@string/cantata_music_menu_dialog_vol1"
-            android:textSize="14sp"
-            android:textColor="#9BA2AB" />
+            android:textColor="@color/white" />
+
+        <ImageButton
+            android:id="@+id/btVol1Down"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:background="@null"
+            android:contentDescription="@string/cantata_tone_down"
+            android:padding="6dp"
+            android:src="@drawable/ic_tone_down" />
 
         <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbVol1"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="30dp"
             android:contentDescription="@string/cantata_music_menu_dialog_vol1"
             android:max="100"
             android:progress="20"
             android:progressDrawable="@drawable/bg_seekbar_progress"
             android:thumb="@mipmap/ic_seekbar_btn" />
+
+        <ImageButton
+            android:id="@+id/btVol1Up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:background="@null"
+            android:contentDescription="@string/cantata_tone_up"
+            android:padding="6dp"
+            android:src="@drawable/ic_tone_up" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="20dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -164,27 +185,45 @@
             android:clickable="false"
             android:focusable="false"
             android:text="@string/cantata_music_menu_dialog_vol2"
-            android:textSize="14sp"
-            android:textColor="#9BA2AB" />
+            android:textColor="@color/white" />
+
+        <ImageButton
+            android:id="@+id/btVol2Down"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:background="@null"
+            android:contentDescription="@string/cantata_tone_down"
+            android:padding="6dp"
+            android:src="@drawable/ic_tone_down" />
 
         <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/sbVol2"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
             android:contentDescription="@string/cantata_music_menu_dialog_vol2"
             android:max="100"
             android:progress="20"
             android:progressDrawable="@drawable/bg_seekbar_progress"
             android:thumb="@mipmap/ic_seekbar_btn" />
+
+        <ImageButton
+            android:id="@+id/btVol2Up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:background="@null"
+            android:contentDescription="@string/cantata_tone_up"
+            android:padding="6dp"
+            android:src="@drawable/ic_tone_up" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginHorizontal="20dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -193,9 +232,8 @@
             android:layout_height="wrap_content"
             android:clickable="false"
             android:focusable="false"
-            android:textSize="14sp"
             android:text="@string/cantata_music_menu_dialog_remote_volume"
-            android:textColor="#9BA2AB" />
+            android:textColor="@color/white" />
 
         <ImageButton
             android:id="@+id/btn_remote_volume_down_dialog_setting"
@@ -207,41 +245,49 @@
             android:padding="6dp"
             android:src="@drawable/ic_tone_down" />
 
-        <EditText
-            android:id="@+id/text_remote_volume"
-            style="@style/cantataBeautyInputStyle"
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/sbRemoteVol"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:autofillHints=""
-            android:hint="15"
-            android:inputType=""
-            android:textColor="#9BA2AB"
-            android:textSize="16sp" />
+            android:contentDescription="@string/cantata_music_menu_dialog_vol2"
+            android:max="100"
+            android:progress="40"
+            android:layout_weight="1"
+            android:progressDrawable="@drawable/bg_seekbar_progress"
+            android:thumb="@mipmap/ic_seekbar_btn" />
 
         <ImageButton
             android:id="@+id/btn_remote_volume_up_dialog_setting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+
             android:background="@null"
             android:contentDescription="@string/cantata_remote_volume_up"
             android:padding="6dp"
             android:src="@drawable/ic_tone_up" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:textSize="12sp"
-            android:text="@string/cantata_input_remote_volume"
-            android:textColor="@color/def_text_grey_6c7" />
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvVoiceEffectList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:overScrollMode="never"
+        android:maxHeight="345dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="1"
+        tools:itemCount="9"
+        tools:listitem="@layout/cantata_item_mv"/>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:overScrollMode="never"
-        android:scrollbars="none"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:scrollbars="none">
 
         <RadioGroup
             android:id="@+id/radioGroup"
