--- a/Android/scenes/cantata/src/main/res/layout/cantata_layout_lrc_active.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_layout_lrc_active.xml
@@ -38,10 +38,10 @@
         android:id="@+id/lyricsView"
         android:layout_width="match_parent"
         android:layout_height="160dp"
+        android:layout_marginTop="42dp"
         android:background="#00000000"
         android:paddingHorizontal="10dp"
         android:paddingVertical="4dp"
-        android:layout_marginTop="42dp"
         app:currentLineHighlightedTextColor="@color/pink_b4"
         app:currentLineTextColor="@color/white"
         app:currentLineTextSize="18sp"
@@ -292,7 +292,8 @@
         android:id="@+id/chorusMicView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/ivJoinChorusBtn"
-        app:layout_constraintTop_toBottomOf="@+id/lyricsView" />
+        android:layout_marginBottom="72dp"
+        app:layout_constraintTop_toBottomOf="@+id/lyricsView"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
