--- a/Android/scenes/cantata/src/main/res/values/themes.xml
+++ b/Android/scenes/cantata/src/main/res/values/themes.xml
@@ -28,4 +28,10 @@
         <item name="android:textColor">@color/grey_to_white</item>
         <item name="android:textSize">12sp</item>
     </style>
+
+    <style name="cantata_cornerTinyStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">8dp</item>
+    </style>
+
 </resources>
