--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/Controllers/VoiceChat/SoundCardSettingViewController.xib
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/Controllers/VoiceChat/SoundCardSettingViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,7 +12,6 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SoundCardSettingViewController" customModule="AgoraEntScenarios" customModuleProvider="target">
             <connections>
                 <outlet property="descLabel" destination="Zqw-FZ-ADt" id="OEL-gS-LY5"/>
-                <outlet property="deviceLabel" destination="ASW-Cn-Eyn" id="Xzs-eT-O57"/>
                 <outlet property="dropBtn" destination="VRR-fo-xzF" id="ZBM-it-JOQ"/>
                 <outlet property="gainLabel" destination="CfA-kD-JBM" id="sfb-Bs-vMq"/>
                 <outlet property="iconView" destination="wlI-5c-Z0j" id="6UL-sB-3JN"/>
@@ -23,7 +22,6 @@
                 <outlet property="typeLabel" destination="OfC-Vk-OLC" id="QvH-mm-R0s"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="volGainSlider" destination="c1G-fM-Mo6" id="fhJ-6u-Jpf"/>
-                <outlet property="warningView" destination="pOc-O7-b6w" id="7b8-Bv-30e"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -37,20 +35,8 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="输入设备" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELa-QF-HQg">
-                    <rect key="frame" x="20.000000000000004" y="119" width="57.333333333333343" height="17"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="default(外置麦克风)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ASW-Cn-Eyn">
-                    <rect key="frame" x="254.66666666666666" y="119.66666666666667" width="118.33333333333334" height="15.666666666666671"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <color key="textColor" red="0.36470588240000001" green="0.36470588240000001" blue="0.36470588240000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z6K-zU-wwa">
-                    <rect key="frame" x="20" y="156" width="353" height="562"/>
+                    <rect key="frame" x="20" y="120" width="353" height="598"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="虚拟声卡开关" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AV0-Q2-lnk">
                             <rect key="frame" x="0.0" y="7" width="86" height="17"/>
@@ -84,7 +70,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="悦耳|磁性" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zqw-FZ-ADt">
-                                    <rect key="frame" x="80" y="73" width="60.666666666666657" height="17"/>
+                                    <rect key="frame" x="80" y="73" width="64.333333333333314" height="17"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -201,44 +187,6 @@
                         <constraint firstItem="Ca8-Tw-FkZ" firstAttribute="leading" secondItem="Sde-gy-U32" secondAttribute="trailing" constant="10" id="zoI-4k-NRa"/>
                     </constraints>
                 </view>
-                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pOc-O7-b6w">
-                    <rect key="frame" x="20" y="156" width="353" height="562"/>
-                    <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="online_create_tipIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="tmK-B0-jWT">
-                            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="20" id="c29-vx-P2R"/>
-                                <constraint firstAttribute="height" constant="20" id="fx6-X4-Jb1"/>
-                            </constraints>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="当前无法使用虚拟声卡,请连接有线输入设备" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lGA-eM-wH0">
-                            <rect key="frame" x="40" y="2.3333333333333419" width="256" height="15.666666666666664"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <color key="textColor" systemColor="systemRedColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gBn-Ff-U10">
-                            <rect key="frame" x="0.0" y="40" width="229.33333333333334" height="46.666666666666657"/>
-                            <string key="text">虚拟声卡目前已支持输入设备清单如下:
-1.有线耳机
-2.有线麦克风</string>
-                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <constraints>
-                        <constraint firstItem="gBn-Ff-U10" firstAttribute="top" secondItem="tmK-B0-jWT" secondAttribute="bottom" constant="20" id="JVp-hN-AL6"/>
-                        <constraint firstItem="lGA-eM-wH0" firstAttribute="centerY" secondItem="tmK-B0-jWT" secondAttribute="centerY" id="MSv-vq-gLi"/>
-                        <constraint firstItem="lGA-eM-wH0" firstAttribute="leading" secondItem="tmK-B0-jWT" secondAttribute="trailing" constant="20" id="QwD-fY-2fe"/>
-                        <constraint firstItem="tmK-B0-jWT" firstAttribute="top" secondItem="pOc-O7-b6w" secondAttribute="top" id="dFv-0e-mNC"/>
-                        <constraint firstItem="gBn-Ff-U10" firstAttribute="leading" secondItem="pOc-O7-b6w" secondAttribute="leading" id="ev4-sJ-urY"/>
-                        <constraint firstItem="tmK-B0-jWT" firstAttribute="leading" secondItem="pOc-O7-b6w" secondAttribute="leading" id="lQu-EL-qrI"/>
-                        <constraint firstItem="tmK-B0-jWT" firstAttribute="top" secondItem="pOc-O7-b6w" secondAttribute="top" id="qMc-0W-dCL"/>
-                        <constraint firstItem="tmK-B0-jWT" firstAttribute="leading" secondItem="pOc-O7-b6w" secondAttribute="leading" id="ysa-iD-zDd"/>
-                    </constraints>
-                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pPO-Fk-MU3">
                     <rect key="frame" x="10" y="70.666666666666671" width="48" height="38"/>
                     <state key="normal" title="Button"/>
@@ -251,38 +199,26 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="pOc-O7-b6w" firstAttribute="leading" secondItem="Z6K-zU-wwa" secondAttribute="leading" id="4tV-IS-dia"/>
-                <constraint firstItem="Z6K-zU-wwa" firstAttribute="top" secondItem="ELa-QF-HQg" secondAttribute="bottom" constant="20" id="CWU-g2-4EU"/>
+                <constraint firstItem="Z6K-zU-wwa" firstAttribute="top" secondItem="GEk-ka-pKe" secondAttribute="bottom" constant="20" id="2T1-n5-x0E"/>
                 <constraint firstItem="GEk-ka-pKe" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="Ie6-3a-7Qg"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Z6K-zU-wwa" secondAttribute="bottom" constant="100" id="Igf-bh-9Gq"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Z6K-zU-wwa" secondAttribute="bottom" constant="100" id="KZ2-eJ-XSn"/>
                 <constraint firstItem="pPO-Fk-MU3" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="LXc-pV-xZy"/>
-                <constraint firstItem="pOc-O7-b6w" firstAttribute="top" secondItem="Z6K-zU-wwa" secondAttribute="top" id="Tz8-GQ-Ocg"/>
                 <constraint firstItem="pPO-Fk-MU3" firstAttribute="centerY" secondItem="GEk-ka-pKe" secondAttribute="centerY" id="Viu-Gh-zuN"/>
-                <constraint firstItem="ELa-QF-HQg" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="60" id="Y30-RG-cuc"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Z6K-zU-wwa" secondAttribute="trailing" constant="20" id="aOW-JL-y4n"/>
-                <constraint firstItem="ASW-Cn-Eyn" firstAttribute="centerY" secondItem="ELa-QF-HQg" secondAttribute="centerY" id="b2t-fx-hgY"/>
                 <constraint firstItem="GEk-ka-pKe" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="d7l-yT-wfq"/>
-                <constraint firstItem="ELa-QF-HQg" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="fCJ-g8-JLp"/>
-                <constraint firstItem="pOc-O7-b6w" firstAttribute="trailing" secondItem="Z6K-zU-wwa" secondAttribute="trailing" id="kg1-EB-Qj5"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ASW-Cn-Eyn" secondAttribute="trailing" constant="20" id="pCT-Qg-04c"/>
-                <constraint firstItem="pOc-O7-b6w" firstAttribute="bottom" secondItem="Z6K-zU-wwa" secondAttribute="bottom" id="sOP-jI-122"/>
                 <constraint firstItem="Z6K-zU-wwa" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="t9b-xu-IuE"/>
             </constraints>
-            <point key="canvasLocation" x="-457.25190839694653" y="26.760563380281692"/>
+            <point key="canvasLocation" x="-68" y="58"/>
         </view>
     </objects>
     <resources>
         <image name="back.png" width="24" height="24"/>
-        <image name="online_create_tipIcon.png" width="16" height="15"/>
         <image name="shuaige" width="200" height="200"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemCyanColor">
             <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
