--- a/Android/scenes/ktv_relay/src/main/res/layout/ktv_relay_activity_room_living.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/ktv_relay_activity_room_living.xml
@@ -124,7 +124,6 @@
         android:layout_width="match_parent"
         android:layout_height="320dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toTopOf="@id/rvUserMember"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tbChatroomTop" />
@@ -144,15 +143,15 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvUserMember"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="65dp"
         android:overScrollMode="never"
         android:clipChildren="false"
         android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/singRelayGameView"
-        app:layout_constraintBottom_toTopOf="@+id/cbMic"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:spanCount="4"
