--- a/Android/scenes/ktv_relay/src/main/res/layout/ktv_relay_layout_game_active_view.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/ktv_relay_layout_game_active_view.xml
@@ -49,7 +49,7 @@
 
     <LinearLayout
         android:id="@+id/winnerTips"
-        android:layout_width="180dp"
+        android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="8dp"
         android:layout_marginStart="6dp"
@@ -84,6 +84,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="3dp"
+            android:layout_marginEnd="3dp"
             android:textSize="12dp"
             android:textColor="@color/white"/>
     </LinearLayout>
