--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_detail_setting_dialog.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_detail_setting_dialog.xml
@@ -40,5 +40,61 @@
                 />
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/llCamera"
+            android:layout_width="83dp"
+            android:layout_height="48dp"
+            android:orientation="vertical"
+            app:layout_constraintStart_toEndOf="@+id/llDashboard"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/lvCamera"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="center"
+                android:background="@drawable/pure1v1_setting_ic_video_on"
+                />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvCamera"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#C6C4DD"
+                android:textSize="12dp"
+                android:text="@string/pure1v1_dashboard_item_camera"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llMic"
+            android:layout_width="83dp"
+            android:layout_height="48dp"
+            android:orientation="vertical"
+            app:layout_constraintStart_toEndOf="@+id/llCamera"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivMic"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="center"
+                android:background="@drawable/pure1v1_setting_ic_mic_on"
+                />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvMic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#C6C4DD"
+                android:textSize="12dp"
+                android:text="@string/pure1v1_dashboard_item_mic"
+                />
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
