--- a/Android/scenes/pure1v1/src/main/res/values/colors.xml
+++ b/Android/scenes/pure1v1/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
-
+<resources>
+    <color name="pure1v1_come_soon_background">#0038FF</color>
 </resources>
