--- a/Android/common/ui-widget/src/main/res/layout/dialog_real_name.xml
+++ b/Android/common/ui-widget/src/main/res/layout/dialog_real_name.xml
@@ -66,11 +66,10 @@
         android:paddingVertical="6dp"
         app:boxBackgroundMode="none"
         app:boxStrokeColor="@android:color/transparent"
-        app:endIconDrawable="@mipmap/close"
-        app:endIconMode="custom"
+        app:endIconMode="clear_text"
+        app:endIconTint="#CBCDE0"
         app:hintEnabled="false"
         app:layout_constraintTop_toBottomOf="@+id/topLayout">
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etRealname"
             android:layout_width="match_parent"
@@ -79,7 +78,7 @@
             android:gravity="start|center"
             android:hint="@string/comm_realname_name_hint"
             android:imeOptions="actionDone"
-            android:maxLength="6"
+            android:maxLength="15"
             android:maxLines="1"
             android:padding="12dp"
             android:singleLine="true"
@@ -100,8 +99,8 @@
         android:paddingVertical="6dp"
         app:boxBackgroundMode="none"
         app:boxStrokeColor="@android:color/transparent"
-        app:endIconDrawable="@mipmap/close"
-        app:endIconMode="custom"
+        app:endIconMode="clear_text"
+        app:endIconTint="#CBCDE0"
         app:hintEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
